# vector2d

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/actions/setup-python-poetry/: action.yml
.github/workflows/: ci.yml  release.yml  tag-and-release.yml  tag.yml
src/python_package_template/: __init__.py  main.py
tests/: __init__.py  test_init.py  test_short_vector2d.py  test_vector2d.py
vector2d/: __init__.py  short_vector2d.py  vector2d.py
