[project]
name = "python-package-template"
version = "0.1.5"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Michael Ellis", email = "michaelellis003@gmail.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.scripts]
python-package-template = "python_package_template:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pyright>=1.1.392.post0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
]

[tool.ruff]
# Set the maximum line length to 79.
line-length = 79
indent-width = 4

# Assume Python 3.10
target-version = "py310"

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E4", "E7", "E9", "E501",
    # pep8-naming
    "N",
    # pycodestyle
    "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    # docstring-tab-indentation
    "D206",
    # triple-single-quotes 
    "D300"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = false
lines-after-imports = -1
lines-between-types = 0
split-on-trailing-comma = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"