[project]
name = "vector2d"
version = "0.3.0"
description = ""
authors = [
    {name = "Michael Ellis",email = "michaelellis003@gmail.com"}
]
license = "Apache-2.0"
license-files = { paths = ["LICENSE"] }
readme = "README.md"
requires-python = ">=3.10" # Update this when changing .python-versions
dependencies = [
]

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pyright = "^1.1.394"
pytest-cov = "^6.0.0"
pre-commit = "^4.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py310" # Update this when changing .python-versions
line-length = 79
indent-width = 4

[tool.ruff.lint]
select = [
    # pyflakes
    "F",
    # pycodestyle
    "E4", "E7", "E9", "E501",
    # pep8-naming
    "N",
    # pycodestyle
    "D",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]

ignore = [
    # docstring-tab-indentation
    "D206",
    # triple-single-quotes
    "D300"
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pydocstyle]
convention = "google" # Accepts: "google", "numpy", or "pep257".

[tool.ruff.lint.isort]
force-single-line = false
force-wrap-aliases = false
lines-after-imports = -1
lines-between-types = 0
split-on-trailing-comma = true

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
docstring-code-format = true

# Set the line length limit used when formatting code snippets in
# docstrings.
docstring-code-line-length = "dynamic"

[tool.pyright]
exclude = ["tests"]

